New features and upgrades

--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@freakycoder/react-native-bounceable": "^0.2.5",
+    "@react-native-async-storage/async-storage": "^1.15.8",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "add": "^2.0.6",
     "axios": "^0.21.4",
     "carousel": "^0.0.3",
     "expo": "~42.0.1",
@@ -18,19 +22,24 @@
     "react": "17.0.2",
     "react-dom": "16.13.1",
     "react-native": "0.65.1",
-    "react-native-codegen": "^0.0.7",
+    "react-native-animated-spinkit": "^1.5.2",
+    "react-native-codegen": "^0.0.8",
+    "react-native-dynamic-search-bar": "^2.0.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-navigation": "^7.20.0",
+    "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.4.0",
+    "react-native-search-bar": "^3.5.1",
+    "react-native-segmented-control-tab": "^4.0.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-spinkit": "^1.5.1",
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
-    "yarn": "^1.22.11"
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
