--- a/ios/PairLunchPicker/Info.plist
+++ b/ios/PairLunchPicker/Info.plist
@@ -52,5 +52,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key> 
+	<array> 
+  		<string>tel</string> 
+  		<string>telprompt</string> 
+	</array>
 </dict>
 </plist>
