--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-dom": "16.13.1",
     "react-native": "0.65.1",
     "react-native-animated-spinkit": "^1.5.2",
+    "react-native-banner-carousel": "^1.0.3",
     "react-native-bouncy-checkbox": "^2.1.7",
     "react-native-codegen": "^0.0.8",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-dnd-board": "^0.0.7",
     "react-native-draganddrop-board": "^1.0.4",
     "react-native-draggable-grid": "^2.1.4",
@@ -38,6 +40,7 @@
     "react-native-masonry-brick-list": "^1.0.3",
     "react-native-modal": "^13.0.0",
     "react-native-modal-datetime-picker": "^13.0.0",
+    "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.9.2",
     "react-native-really-awesome-button": "^1.6.0",
     "react-native-reanimated": "~2.2.0",
@@ -49,10 +52,13 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-spinkit": "^1.5.1",
     "react-native-svg": "12.1.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-system-navigation-bar": "^1.0.2",
+    "react-native-tab-view": "^3.1.1",
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
     "react-native-wheel-color-picker": "^1.1.0",
+    "realm": "^10.10.1",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
