Major updates to pair lunch tracker

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "@types/react-native-sqlite-storage": "^5.0.1",
     "add": "^2.0.6",
     "axios": "^0.21.4",
     "carousel": "^0.0.3",
@@ -30,7 +31,6 @@
     "react-native-bouncy-checkbox": "^2.1.7",
     "react-native-codegen": "^0.0.8",
     "react-native-countdown-component": "^2.7.1",
-    "react-native-dnd-board": "^0.0.7",
     "react-native-draganddrop-board": "^1.0.4",
     "react-native-draggable-grid": "^2.1.4",
     "react-native-elements": "^3.4.2",
@@ -43,7 +43,7 @@
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.9.2",
     "react-native-really-awesome-button": "^1.6.0",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.4.0",
     "react-native-search-bar": "^3.5.1",
@@ -51,6 +51,7 @@
     "react-native-select-two": "^1.1.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-spinkit": "^1.5.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "12.1.1",
     "react-native-swiper": "^1.6.0",
     "react-native-system-navigation-bar": "^1.0.2",
